--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,6 @@ div {
   height: 70px;
 }
 
-a {
-  text-decoration: none;
-}
 
 a:hover {
   color: cyan;
@@ -21,7 +18,7 @@ a:hover {
 
 .col-sm-4,
 .col-sm-3 {
-  height: 300px;
+  height: 520px;
   width: 315px;
 
 }
@@ -44,4 +41,8 @@ h2 {
   height: 200px;
   background-color: white;
   border: 1px solid black;
+}
+
+.footer {
+ margin-top: 330px;
 }
